--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,7 +7,7 @@
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button class="btn btn-success ml-2" type="submit">Login</button> |
-    <a href="{% url 'password_reset' %}">Forgot password</a>
+    <button class="btn btn-success ml-2" type="submit">Login</button>
+    <a href="{% url 'password_reset' %}" class="btn btn-secondary ml-2">Forgot password</a>
 </form>
 {% endblock %}
