--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -13,7 +13,8 @@
                 {{ article.body }}
             </div>
             <div class="card-footer text-center text-muted">
-                <a href="#">Edit</a> | <a href="#">Delete</a>
+                <a href="{% url 'article_update' article.pk %}">Edit</a> |
+                <a href="{% url 'article_delete' article.pk %}">Delete</a>
             </div>
         </div>
     {% endfor %}
